--- a/Site/clientes.html
+++ b/Site/clientes.html
@@ -46,12 +46,12 @@
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="./index.html">
+            <a class="nav-link" href="./index.html">
               <i class="ni ni-tv-2 text-primary"></i> Painel de Controle
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./clientes.html">
+            <a class="nav-link active" href="./clientes.html">
               <i class="ni ni-badge text-blue"></i> Clientes
             </a>
           </li>
@@ -75,7 +75,7 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./index.html">Painel de Controle</a>
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./clientes.html">Clientes </a>
       </div>
     </nav>
     <!-- Header -->
@@ -84,51 +84,18 @@
         <div class="header-body">
           <!-- Card stats -->
           <div class="row">
-            <div class="col-xl-4">
-              <div class="card card-stats mb-4 mb-xl-0">
+            <div class="col-xl-12">
+              <div class="card card-stats">
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Clientes</h5>
-                      <span class="h2 font-weight-bold mb-0">924</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                        <i class="ni ni-badge"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4">
-              <div class="card card-stats mb-4 mb-xl-0">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Carros</h5>
-                      <span class="h2 font-weight-bold mb-0">2,356</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                        <i class="ni ni-archive-2"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-4">
-              <div class="card card-stats mb-4 mb-xl-0">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Ocorrências</h5>
-                      <span class="h2 font-weight-bold mb-0">350,897</span>
-                    </div>
-                    <div class="col-auto">
-                      <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                        <i class="ni ni-ambulance"></i>
+                      <div class="form-group">
+                        <div class="input-group input-group-alternative mb-4">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
+                          </div>
+                          <input class="form-control form-control-alternative" placeholder="Pesquisar" type="text">
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -143,62 +110,57 @@
     <div class="container-fluid mt--7">
       <div class="row">
         <div class="col-xl-12 mb-5 mb-xl-0">
-            <div class="col">
-                <div class="card bg-gradient-default shadow">
-                  <div class="card-header bg-transparent border-0">
-                    <h3 class="text-white mb-0">Clientes</h3>
-                  </div>
-                  <div class="table-responsive">
-                    <table class="table align-items-center table-dark table-flush">
-                      <thead class="thead-dark">
-                        <tr>
-                          <th scope="col">Nome</th>
-                          <th scope="col">CPF</th>
-                          <th scope="col">Telefone</th>
-                          <th scope="col">Número de Carros</th>
-                          <th scope="col">Número de ocorrências</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">
-                            Mateus
-                          </th>
-                          <td>
-                            106.503.789-97
-                          </td>
-                          <td>
-                            (47) 98881-9255
-                          </td>
-                          <td>
-                            1
-                          </td>
-                          <td>
-                            0
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">
-                            Cristian
-                          </th>
-                          <td>
-                            123.456.789-10
-                          </td>
-                          <td>
-                            (47) 12312-1233
-                          </td>
-                          <td>
-                            123812
-                          </td>
-                          <td>
-                            102
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
+          <div class="col">
+            <div class="card bg-gradient-default shadow">
+              <div class="card-header bg-transparent border-0">
+                <h3 class="text-white mb-0">Clientes</h3>
               </div>
+              <div class="table-responsive">
+                <table class="table align-items-center table-dark table-flush">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th scope="col">Nome</th>
+                      <th scope="col">CPF</th>
+                      <th scope="col">RG</th>
+                      <th scope="col">Endereço</th>
+                      <th scope="col">Telefone</th>
+                      <th scope="col"></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row">
+                        Mateus
+                      </th>
+                      <td>
+                        106.503.789-97
+                      </td>
+                      <td>
+                        699.992-231
+                      </td>
+                      <td>
+                        Travessa Mônaco, Taboão, Rio do Sul, n° 22
+                      </td>
+                      <td>
+                        (47) 98881-9255
+                      </td>
+                      <td>    
+                        <div class="dropdown">
+                          <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-ellipsis-v"></i>
+                          </a>
+                          <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                            <a class="dropdown-item" href="#">Excluir</a>
+                            <a class="dropdown-item" href="#">Editar</a>
+                          </div>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- Footer -->
