--- a/Site/clientes.html
+++ b/Site/clientes.html
@@ -114,39 +114,41 @@
                       <h3 class="text-center display-4" style="margin-bottom: 1.5rem;">Pesquisa avançada</h3>
                     </div>
                   </div>
-                  <div class="row">
-                    <div class="form-group col-12 col-xl-6">
-                      <div class="input-group input-group-alternative mb-4">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
+                  <form method="POST">
+                    <div class="row">
+                      <div class="form-group col-12 col-xl-6">
+                        <div class="input-group input-group-alternative mb-4">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
+                          </div>
+                          <input class="form-control form-control-alternative" placeholder="Pesquisar" type="text">
                         </div>
-                        <input class="form-control form-control-alternative" placeholder="Pesquisar" type="text">
+                      </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="1" class="custom-control-input" id="nome" type="radio" checked>
+                          <label class="custom-control-label" for="nome">Nome</label>
+                        </div>
+                      </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="2" class="custom-control-input" id="cpf" type="radio">
+                          <label class="custom-control-label" for="cpf">CPF</label>
+                        </div>
+                      </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="3" class="custom-control-input" id="rg" type="radio">
+                          <label class="custom-control-label" for="rg">RG</label>
+                        </div>
                       </div>
                     </div>
-                    <div class="col-12 col-md-4 col-xl-2 text-center">
-                      <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
-                        <input name="filtro" value="1" class="custom-control-input" id="nome" type="radio" checked>
-                        <label class="custom-control-label" for="nome">Nome</label>
-                      </div>
-                    </div>
-                    <div class="col-12 col-md-4 col-xl-2 text-center">
-                      <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
-                        <input name="filtro" value="2" class="custom-control-input" id="cpf" type="radio">
-                        <label class="custom-control-label" for="cpf">CPF</label>
-                      </div>
-                    </div>
-                    <div class="col-12 col-md-4 col-xl-2 text-center">
-                      <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
-                        <input name="filtro" value="3" class="custom-control-input" id="rg" type="radio">
-                        <label class="custom-control-label" for="rg">RG</label>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-12 text-center">
+                    <div class="row">
+                      <div class="col-12 text-center">
                       <button type="button" class="btn btn-outline-primary">Pesquisar</button>
+                      </div>
                     </div>
-                  </div>
+                  </form>
                 </div>
               </div>
             </div>
@@ -237,10 +239,11 @@
                                   <div class="text-center text-muted mb-4">
                                     <h3>Alterar informações do cliente</h5>
                                   </div>
+                                  <!-- Formulário alterar cliente -->
                                   <form role="form">
                                     <div class="form-group mb-3">
                                       <div class="input-group input-group-alternative">
-                                        <input class="form-control" placeholder="Nome" type="email">
+                                        <input class="form-control" placeholder="Nome" type="text">
                                       </div>
                                     </div>
                                     <div class="form-group">
@@ -289,10 +292,11 @@
                                 <div class="text-center text-muted mb-4">
                                   <h3>Adicionar cliente</h5>
                                 </div>
+                                <!-- Formulário adicionar cliente -->
                                 <form role="form">
                                   <div class="form-group mb-3">
                                     <div class="input-group input-group-alternative">
-                                      <input class="form-control" placeholder="Nome" type="email">
+                                      <input class="form-control" placeholder="Nome" type="text">
                                     </div>
                                   </div>
                                   <div class="form-group">
