--- a/Site/ocorrencias.html
+++ b/Site/ocorrencias.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <link href="./assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
   <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link type="text/css" href="./assets/css/argon.css?v=1.0.0" rel="stylesheet">
+  <link type="text/css" href="./assets/css/argon.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,6 +43,17 @@
             </div>
           </div>
         </div>
+        <!-- Form -->
+        <form class="mt-4 mb-3 d-md-none">
+          <div class="input-group input-group-rounded input-group-merge">
+            <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Pesquisar" aria-label="Search">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                <span class="fa fa-search"></span>
+              </div>
+            </div>
+          </div>
+        </form>
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -56,12 +67,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./carros.html">
+            <a class="nav-link active" href="./carros.html">
               <i class="ni ni-archive-2 text-orange"></i> Carros
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./ocorrencias.html">
+            <a class="nav-link" href="./ocorrencias.html">
               <i class="ni ni-ambulance text-red"></i> Ocorrências
             </a>
           </li>
@@ -75,21 +86,37 @@
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
       <div class="container-fluid">
         <!-- Brand -->
-        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./ocorrencias.html">Ocorrências </a>
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="./clientes.html">Clientes </a>
+        <!-- Form -->
+        <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
+          <div class="form-group mb-0">
+            <div class="input-group input-group-alternative">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fas fa-search"></i></span>
+              </div>
+              <input class="form-control" placeholder="Pesquisar" type="text">
+            </div>
+          </div>
+        </form>
       </div>
     </nav>
     <!-- Header -->
     <div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
       <div class="container-fluid">
         <div class="header-body">
-          <!-- Card stats -->
+          <!-- Pesquisa avançada -->
           <div class="row">
             <div class="col-xl-12">
               <div class="card card-stats">
                 <div class="card-body">
                   <div class="row">
-                    <div class="col">
-                      <div class="form-group">
+                    <div class="col-12">
+                      <h3 class="text-center display-4" style="margin-bottom: 1.5rem;">Pesquisa avançada</h3>
+                    </div>
+                  </div>
+                  <form method="POST">
+                    <div class="row">
+                      <div class="form-group col-12 col-xl-6">
                         <div class="input-group input-group-alternative mb-4">
                           <div class="input-group-prepend">
                             <span class="input-group-text"><i class="ni ni-zoom-split-in"></i></span>
@@ -97,8 +124,31 @@
                           <input class="form-control form-control-alternative" placeholder="Pesquisar" type="text">
                         </div>
                       </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="1" class="custom-control-input" id="nome" type="radio" checked>
+                          <label class="custom-control-label" for="nome">Nome</label>
+                        </div>
+                      </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="2" class="custom-control-input" id="cpf" type="radio">
+                          <label class="custom-control-label" for="cpf">CPF</label>
+                        </div>
+                      </div>
+                      <div class="col-4 col-xl-2 text-center">
+                        <div class="custom-control custom-radio mb-3" style="margin-top: 0.5rem;">
+                          <input name="filtro" value="3" class="custom-control-input" id="rg" type="radio">
+                          <label class="custom-control-label" for="rg">RG</label>
+                        </div>
+                      </div>
                     </div>
-                  </div>
+                    <div class="row">
+                      <div class="col-12 text-center">
+                      <button type="button" class="btn btn-outline-primary">Pesquisar</button>
+                      </div>
+                    </div>
+                  </form>
                 </div>
               </div>
             </div>
@@ -113,36 +163,36 @@
           <div class="col">
             <div class="card bg-gradient-default shadow">
               <div class="card-header bg-transparent border-0">
-                <h3 class="text-white mb-0">Ocorrências</h3>
+                <h3 class="text-white mb-0">Clientes</h3>
               </div>
               <div class="table-responsive">
                 <table class="table align-items-center table-dark table-flush">
                   <thead class="thead-dark">
                     <tr>
-                      <th scope="col">Código</th>
-                      <th scope="col">Placa do Carro</th>
-                      <th scope="col">Data</th>
-                      <th scope="col">Local</th>
-                      <th scope="col">Descrição</th>
+                      <th scope="col">Placa</th>
+                      <th scope="col">Fabricante</th>
+                      <th scope="col">Modelo</th>
+                      <th scope="col">Ano</th>
+                      <th scope="col">RG do cliente</th>
                       <th scope="col"></th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <th scope="row">
-                        234
+                        MMA-1234
                       </th>
                       <td>
-                        MMA-1234
+                        Volkswagen
                       </td>
                       <td>
-                        12/03/2019 
+                        Gol GTI
                       </td>
                       <td>
-                        Itaquaquecetuba SP
+                        1997
                       </td>
                       <td>
-                        Multa por excesso de velocidade
+                        6.666.666
                       </td>
                       <td>    
                         <div class="dropdown">
@@ -150,12 +200,135 @@
                             <i class="fas fa-ellipsis-v"></i>
                           </a>
                           <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                            <a class="dropdown-item" href="#">Excluir</a>
-                            <a class="dropdown-item" href="#">Editar</a>
+                            <a class="dropdown-item" href="#!" data-toggle="modal" data-target="#modal-exclusao">Excluir</a>
+                            <a class="dropdown-item" href="#!" data-toggle="modal" data-target="#modal-alterar">Editar</a>
                           </div>
                         </div>
                       </td>
+                      <!-- Excluir cliente -->
+                      <div class="modal fade" id="modal-exclusao" tabindex="-1" role="dialog" aria-labelledby="modal-exclusao" aria-hidden="true">
+                        <div class="modal-dialog modal-danger modal-dialog-centered modal-" role="document">
+                          <div class="modal-content bg-gradient-danger">    
+                            <div class="modal-header">
+                              <h6 class="modal-title" id="modal-title-notification">Sua confirmação é necessária</h6>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                              </button>
+                            </div>  
+                            <div class="modal-body">  
+                              <div class="py-3 text-center">
+                                <i class="ni ni-bell-55 ni-3x"></i>
+                                <h4 class="heading mt-4">Atenção!</h4>
+                                <p>Você deseja realmente excluir este cliente?</p>
+                              </div>    
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-white">Sim, excluir cliente</button>
+                                <button type="button" class="btn btn-link text-white ml-auto" data-dismiss="modal">Cancelar</button> 
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- Alterar cliente -->
+                      <div class="modal fade" id="modal-alterar" tabindex="-1" role="dialog" aria-labelledby="modal-alterar" aria-hidden="true">
+                        <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
+                          <div class="modal-content">  
+                            <div class="modal-body p-0">
+                              <div class="card bg-secondary shadow border-0">
+                                <div class="card-body px-lg-5 py-lg-5">
+                                  <div class="text-center text-muted mb-4">
+                                    <h3>Alterar informações do cliente</h5>
+                                  </div>
+                                  <!-- Formulário alterar cliente -->
+                                  <form role="form">
+                                    <div class="form-group mb-3">
+                                      <div class="input-group input-group-alternative">
+                                        <input class="form-control" placeholder="placa" type="text">
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="input-group input-group-alternative">
+                                        <input class="form-control" placeholder="fabricante" type="text">
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="input-group input-group-alternative">
+                                        <input class="form-control" placeholder="modelo" type="text">
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="input-group input-group-alternative">
+                                        <input class="form-control" placeholder="ano" type="text">
+                                      </div>
+                                    </div>
+                                    <div class="form-group">
+                                      <div class="input-group input-group-alternative">
+                                        <input class="form-control" placeholder="rg_cliente" type="text">
+                                      </div>
+                                    </div>
+                                    <div class="text-center">
+                                      <button type="button" class="btn btn-primary my-4">Alterar</button>
+                                    </div>
+                                  </form>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </tr>
+                    <!-- Adicionar cliente -->
+                    <tr>
+                      <td colspan="5">
+                        Adicionar cliente
+                      </td>
+                      <td>
+                        <a class="btn btn-sm btn-icon-only text-light" href="#!" data-toggle="modal" data-target="#modal-form"><i class="fas fa-plus"></i></a>
+                      </td>
+                    </tr>
+                    <div class="modal fade" id="modal-form" tabindex="-1" role="dialog" aria-labelledby="modal-form" aria-hidden="true">
+                      <div class="modal-dialog modal- modal-dialog-centered modal-sm" role="document">
+                        <div class="modal-content">  
+                          <div class="modal-body p-0">
+                            <div class="card bg-secondary shadow border-0">
+                              <div class="card-body px-lg-5 py-lg-5">
+                                <div class="text-center text-muted mb-4">
+                                  <h3>Adicionar cliente</h5>
+                                </div>
+                                <!-- Formulário adicionar cliente -->
+                                <form role="form">
+                                  <div class="form-group mb-3">
+                                    <div class="input-group input-group-alternative">
+                                      <input class="form-control" placeholder="Nome" type="email">
+                                    </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                      <input class="form-control" placeholder="CPF" type="text">
+                                    </div>
+                                  </div>
+                                  <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                      <input class="form-control" placeholder="RG" type="text">
+                                    </div>
+                                  </div>
+                                  <textarea class="form-control form-control-alternative" rows="3" placeholder="Endereço"></textarea>
+                                  <br/>
+                                  <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                      <input class="form-control" placeholder="Telefone" type="text">
+                                    </div>
+                                  </div>
+                                  <div class="text-center">
+                                    <button type="button" class="btn btn-primary my-4">Adicionar</button>
+                                  </div>
+                                </form>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </tbody>
                 </table>
               </div>
