--- a/Site/index.html
+++ b/Site/index.html
@@ -16,7 +16,6 @@
   
   <!-- CSS -->
   <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="assets/css/home.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 <body>
@@ -26,7 +25,7 @@
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper container">
-            <a href="#!" class="brand-logo"><img src="assets/img/logo-sicherheit.png" alt="Logo Sicherheit"></a>
+            <a href="index.html" class="brand-logo"><img src="assets/img/logo-sicherheit.png" alt="Logo Sicherheit"></a>
             <a href="#" data-target="mobile-sidenav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
               <li><a class="active" href="index.html">Painel de controle</a></li>
@@ -137,7 +136,6 @@
           </table>
         </div>
       </div>
-
     </div>
 
   </main>
