--- a/Site/carros.html
+++ b/Site/carros.html
@@ -133,7 +133,7 @@
                                     <div class="row">
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="placa" type="text" value="ADES-1234" class="validate">
+                                                <input id="placa" type="text" value="ADES-1234" class="validate"  data-mask="SSSS-0000">
                                                 <label for="placa">Placa</label>
                                             </div>
                                         </div>
@@ -151,7 +151,7 @@
                                         </div>
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="ano" type="text" value="2020" class="validate">
+                                                <input id="ano" type="text" value="2020" class="validate" data-mask="0000" data-mask-reverse="true">
                                                 <label for="ano">Ano</label>
                                             </div>
                                         </div>
@@ -206,7 +206,7 @@
                                         <div class="row">
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="placa" type="text" class="validate">
+                                                    <input id="placa" type="text" class="validate" data-mask="SSSS-0000">
                                                     <label for="placa">Placa</label>
                                                 </div>
                                             </div>
@@ -224,7 +224,7 @@
                                             </div>
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="ano" type="text" class="validate">
+                                                    <input id="ano" type="text" class="validate"  data-mask="0000">
                                                     <label for="ano">Ano</label>
                                                 </div>
                                             </div>
@@ -271,7 +271,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.min.js"></script>
   <script src="assets/js/init.js"></script>
-
+  <script src="assets/js/jquery.mask.min.js"></script>
   </body>
 
 </html>
