--- a/Site/ocorrencias.html
+++ b/Site/ocorrencias.html
@@ -134,7 +134,7 @@
                                         <div class="col s12">
                                             <div class="input-field">
                                                 <input id="codigo" type="text" value="1" class="validate">
-                                                <label for="codigo">Placa</label>
+                                                <label for="codigo">Código</label>
                                             </div>
                                         </div>
                                         <div class="col s12">
@@ -150,7 +150,7 @@
                                         </div>
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="data" type="text" value="12/12/2032" class="validate">
+                                                <input id="data" type="text" value="12/12/2032" class="validate" data-mask="00/00/0000">
                                                 <label for="data">Data</label>
                                             </div>
                                         </div>
@@ -207,7 +207,7 @@
                                             <div class="col s12">
                                                 <div class="input-field">
                                                     <input id="codigo" type="text" class="validate">
-                                                    <label for="codigo">Placa</label>
+                                                    <label for="codigo">Código</label>
                                                 </div>
                                             </div>
                                             <div class="col s12">
@@ -223,7 +223,7 @@
                                             </div>
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="data" type="text" class="validate">
+                                                    <input id="data" type="text" class="validate" data-mask="00/00/0000">
                                                     <label for="data">Data</label>
                                                 </div>
                                             </div>
@@ -271,6 +271,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.min.js"></script>
   <script src="assets/js/init.js"></script>
+  <script src="assets/js/jquery.mask.min.js"></script>
 
   </body>
 
