--- a/Site/clientes.html
+++ b/Site/clientes.html
@@ -119,7 +119,7 @@
                   <tr>
                     <td>Alvin</td>
                     <td>123.342.124-21</td>
-                    <td>812.123.123</td>
+                    <td>8.123.123</td>
                     <td>89160-494, Rio do Sul, Taboão</td>
                     <td><a href="tel:+5548912322134">(48) 91232-2134</a></td>
                     <!-- Alterar -->
@@ -139,13 +139,13 @@
                                         </div>
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="cpf" type="text" value="123.342.123-21" class="validate">
+                                                <input id="cpf" type="text" value="123.342.123-21" class="validate" data-mask="000.000.000-00">
                                                 <label for="cpf">CPF</label>
                                             </div>
                                         </div>
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="rg" type="text" value="812.123.123" class="validate">
+                                                <input id="rg" type="text" value="8.123.123" class="validate" data-mask="0.000.000">
                                                 <label for="rg">RG</label>
                                             </div>
                                         </div>
@@ -157,7 +157,7 @@
                                         </div>
                                         <div class="col s12">
                                             <div class="input-field">
-                                                <input id="telefone" type="text" value="(48) 91232-2134" class="validate">
+                                                <input id="telefone" type="text" value="(48) 91232-2134" class="validate" data-mask="(00) 00000-0000">
                                                 <label for="telefone">Telefone</label>
                                             </div>
                                         </div>
@@ -207,13 +207,13 @@
                                             </div>
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="cpf" type="text" class="validate">
+                                                    <input id="cpf" type="text" class="validate" data-mask="000.000.000-00">
                                                     <label for="cpf">CPF</label>
                                                 </div>
                                             </div>
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="rg" type="text" class="validate">
+                                                    <input id="rg" type="text" class="validate" data-mask="0.000.000">
                                                     <label for="rg">RG</label>
                                                 </div>
                                             </div>
@@ -225,7 +225,7 @@
                                             </div>
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="telefone" type="text"class="validate">
+                                                    <input id="telefone" type="text"class="validate" data-mask="(00) 00000-0000">
                                                     <label for="telefone">Telefone</label>
                                                 </div>
                                             </div>
@@ -261,6 +261,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="assets/js/materialize.min.js"></script>
   <script src="assets/js/init.js"></script>
+  <script src="assets/js/jquery.mask.min.js"></script>
 
   </body>
 
