--- a/Site/carros.html
+++ b/Site/carros.html
@@ -117,7 +117,7 @@
         
                 <tbody>
                   <tr>
-                    <td>ADES-1234</td>
+                    <td>AES-1234</td>
                     <td>Fiat</td>
                     <td>Uno ON FIRE</td>
                     <td>2020</td>
@@ -195,7 +195,7 @@
                         <td>
                             <span class="title left-align">Adicionar</span>
                         </td>
-                        <td colspan="5"></td>
+                        <td></td><td></td><td></td><td></td><td></td>
                         <td>
                             <a class="modal-trigger adicionar" href="#adicionar1"><i class="material-icons">add_circle</i></a>
                             <div id="adicionar1" class="modal modal-fixed-footer">
@@ -206,7 +206,7 @@
                                         <div class="row">
                                             <div class="col s12">
                                                 <div class="input-field">
-                                                    <input id="placa" type="text" class="validate" data-mask="SSSS-0000">
+                                                    <input id="placa" type="text" class="validate" data-mask="SSS-0000">
                                                     <label for="placa">Placa</label>
                                                 </div>
                                             </div>
