--- a/Site/ocorrencias.html
+++ b/Site/ocorrencias.html
@@ -118,7 +118,7 @@
                 <tbody>
                   <tr>
                     <td>1</td>
-                    <td>ADES-1234</td>
+                    <td>ADS-1234</td>
                     <td>12/12/2032</td>
                     <td>Aurora</td>
                     <td>Enfiou em um poste de cabrito a 1230 km/h</a></td>
@@ -141,9 +141,9 @@
                                             <div class="input-field">
                                                 <select name="rgCliente">
                                                     <option value="0" disabled>Escolha uma opção</option>
-                                                    <option value="1" selected>ADES-1234</option>
-                                                    <option value="2">QQWE-7483</option>
-                                                    <option value="3">OFKD-1432</option>
+                                                    <option value="1" selected>ADE-1234</option>
+                                                    <option value="2">QQW-7483</option>
+                                                    <option value="3">OFD-1432</option>
                                                 </select>
                                                 <label>Placa do carro</label>
                                             </div>
@@ -195,7 +195,7 @@
                         <td>
                             <span class="title left-align">Adicionar</span>
                         </td>
-                        <td colspan="5"></td>
+                        <td></td><td></td><td></td><td></td><td></td>
                         <td>
                             <a class="modal-trigger adicionar" href="#adicionar1"><i class="material-icons">add_circle</i></a>
                             <div id="adicionar1" class="modal modal-fixed-footer">
@@ -214,9 +214,9 @@
                                                 <div class="input-field">
                                                     <select name="rgCliente">
                                                         <option value="0" disabled selected>Escolha uma opção</option>
-                                                        <option value="1">ADES-1234</option>
-                                                        <option value="2">QQWE-7483</option>
-                                                        <option value="3">OFKD-1432</option>
+                                                        <option value="1">ADE-1234</option>
+                                                        <option value="2">QQW-7483</option>
+                                                        <option value="3">OFK-1432</option>
                                                     </select>
                                                     <label>Placa do carro</label>
                                                 </div>
